# werelib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  readme.md
cmake/: WERELIBConfig.cmake.in
docs/: modues.md  were.md
docs/example/: ex_0A  ex_A.md  ex_A_withModule.md
include/: were_winsock.hpp  werelib.hpp
install/lib/: werelib.lib
lib/: werelib.cpp  werelib.hpp
lib/artnet/: artnet.cpp  artnet.hpp
lib/win/: spout.cpp  spout.hpp  were_winsock.hpp  winapi.hpp  winsock.cpp  winsock.hpp  winterm.cpp  winterm.hpp
module/: werelib.cppm
src/: weretype.cppm
src/encoding/: were.base64.cppm  were.hex.cppm
